fix: change align

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   min-height: 100vh;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   background: hsl(230, 29%, 19%);
   color: hsl(184, 30%, 70%);
 }
